Set JDK to 21